Tue Feb 15 16:41:18 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc (IsValidURL): Fix problem with
	valid_extensions when an "extension" would include part of a
	directory path or server name, as contributed by Warren Jones.
	Also fix problem with valid_extensions matching failure when URL
	parameters follow extension, as reported by fxbois@cybercable.fr.

	* htdig/Document.cc (RetrieveLocal), htdig/Document.h,
	htdig/Retriever.cc(Initial, parse_url, GetLocal, GetLocalUser,
	IsLocalURL, got_href, got_redirect), htdig/Retriever.h,
	htdig/Server.cc(Server), htdig/Server.h: Apply Paul B. Henson's
	enhancements to local_urls, local_default_urls & local_default_doc.
	* htdoc/attrs.html: Document these.

	* htsearch/htsearch.cc (setupWords): Fix problem reported by
	D.J. Adams, in which bad_words removal failed on upper-case
	search words.

	* htsearch/Display.cc(setVariables), htcommon/defaults.cc: Added
	build_select_lists attribute, to generate selector menus in forms.
	* htdoc/hts_selectors.html: Added this page to explain this new
	feature, plus other details on select lists in general.
	* htdoc/hts_templates.html: Added relevant links to related attributes
	and selectors documentation.
	* htdoc/attrs.html, cf_by{name,prog}.html: Added relevant explanations
	and links to selectors documentation.

	* htlib/QuotedStringList.cc (Create): fix PR#743, where quoted string
	lists didn't allow embedded quotes of opposite sort in strings
	(e.g. "'" or '"'), and fix to avoid overrunning end of string
	if it ends with backslash.

	* htcommon/WordList.cc (valid_word): Applied Marc Pohl's fix to make
	this 8-bit clean on Solaris.

	* contrib/conv_doc.pl, contrib/parse_doc.pl: Applied Warren Jones's
	changes to these scripts.

	* htdig/PDF.cc (parseNonTextLine): Fix bogus escape sequences
	around Title parsing.  (Fixes PR#740)

	* htsearch/Display.cc (display, displaySyntaxError),
	htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html,