@@ -1,4 +1,9 @@
-Tue Feb 15 16:41:18 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+Tue Feb 15 17:04:28 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htdig/Retriever.cc(GetLocal, GetLocalUser): Add URL-decoding
+	enhancements to local_urls, local_default_urls & local_default_doc,
+	to allow hex encoding of special characters.
+	* htdoc/attrs.html: Document these.
 
 	* htdig/Retriever.cc (IsValidURL): Fix problem with
 	valid_extensions when an "extension" would include part of a
